--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,25 @@
-page-home {
+.card-background-page {
+    ion-card {
+        position: relative;
+        text-align: center;
+    }
 
+    .card-title {
+        position: absolute;
+        width: 100%;
+        font-size: 2.0em;
+        font-weight: bold;
+        color: white;
+        top: 36%;
+    }
+
+
+    .card-subtitle {
+        position: absolute;
+        width: 100%;
+        font-size: 1.0em;
+        
+        color: white;
+        top: 52%;
+    }
 }
