--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,12 +34,16 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #ec14be,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  lightdark:    #363636
 );
+
+$fab-content-margin: 20px;
+$fab-list-button-background-color : color($colors, dark);
 
 
 // App iOS Variables
@@ -53,12 +57,15 @@ $colors: (
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
+$searchbar-md-input-background-color: color($colors, lightdark);
+
 
 
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
+$searchbar-wp-input-background-color: color($colors, lightdark);
 
 
 
@@ -70,7 +77,7 @@ $colors: (
 // so that the above variables are used and Ionic's
 // default are overridden.
 
-@import "ionic.theme.default";
+@import "ionic.theme.dark";
 
 
 // Ionicons
